# pose-estimation-prototyping

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  environment.yml
ekf-simulation/: CMakeLists.txt
ekf-simulation/imu_data_logs/: imu_data0.txt  imu_data1.txt  imu_data2.txt  imu_data3.txt  imu_data4.txt  imu_dt_data0.txt  imu_dt_data1.txt  imu_dt_data2.txt  imu_dt_data3.txt  imu_dt_data4.txt  pose_data0.txt  pose_data1.txt  pose_data2.txt  pose_data3.txt  pose_data4.txt
ekf-simulation/libs/: __init__.py
ekf-simulation/libs/eigen/: README.md
ekf-simulation/scripts/: ParseRawIMUData.py  ekf_verify.py  noisy_rover.py  test_bindings.py
ekf-simulation/src/: cfs_simulation.h  ekf.cpp  ekf.h
ekf-simulation/src/bindings/: ekf_bindings.cpp
kinematics/: __init__.py  four_wheel.py  kinematics.py  noise_test.py  slip_directions.py  test_four_wheel.py
kinematics/four_wheel/: conftest.py  four_wheel.py  utils.py
kinematics/four_wheel/tests/: test_four_wheel.py
kinematics/progress/: progress_bar.py
sun-sensor/: sun_sensor.py
translation-quaternions/: slerp.py  test_math.py  translation_estimation.py  translation_from_imu.py
